--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  overflow-y: overlay;
+}
+
+::-webkit-scrollbar {
+  width: 0.4em;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.1);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+}
+
 /*
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
